# islamic_prayer_time_app

./: .coveragerc  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: math_test.yml  tests.yml
docs/: api_reference.md  calculation_methodology.md  hijri_calendar.md  qibla_calculation.md
examples/: basic_usage.py  different_methods.py  hijri_date_conversion.py  monthly_calendar.py  multiple_locations.py  qibla_only.py
prayer_times/: cli.py  config.py
prayer_times/calculator/: calculator.py  reverse_calculator.py  times.py
prayer_times/core/: astronomy.py  calendar.py  qibla.py
prayer_times/utils/: time_utils.py
src/utils/: math_utils.py
tests/: test_astronomy.py  test_calculator.py  test_calendar.py  test_cli.py  test_math.py  test_qibla.py  test_reverse_calculator.py  test_times.py
