[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "islamic_prayer_time_app"
version = "0.1.0"
description = "Islamic Prayer Time Calculator"
authors = [{name = "Omar Younis"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]