[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "islamic_prayer_time_app"
version = "0.1.0"
description = "Calculates Islamic prayer times and Qibla direction based on astronomical calculations."
readme = "README.md"
authors = [
    {name = "Omar Younis"}
]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["prayer_times*"]